build/log/idf_py_stdout_output_2096
[1/12] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\ESP_IDF\ESP32_project\gatt_server\build\bootloader\esp-idf\esptool_py && D:\ESP_IDF\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe D:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/ESP_IDF/ESP32_project/gatt_server/build/bootloader/bootloader.bin"
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[2/10] Building C object esp-idf/w25q32/CMakeFiles/__idf_w25q32.dir/w25q32.c.obj
FAILED: esp-idf/w25q32/CMakeFiles/__idf_w25q32.dir/w25q32.c.obj 
ccache D:\ESP_IDF\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/ESP_IDF/ESP32_project/gatt_server/build/config -ID:/ESP_IDF/ESP32_project/gatt_server/components/w25q32/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/newlib/platform_include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/FreeRTOS-Kernel/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/esp_additions/include/freertos -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/esp_additions/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/esp_additions/arch/xtensa/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/include/soc -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/include/soc/esp32 -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/port/esp32/. -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/port/esp32/private_include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/heap/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/log/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/soc/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/soc/esp32 -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/soc/esp32/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/hal/esp32/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/hal/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/hal/platform_port/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_rom/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_rom/include/esp32 -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_rom/esp32 -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_common/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_system/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_system/port/soc -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_system/port/include/private -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/xtensa/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/xtensa/esp32/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/include/apps -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/include/apps/sntp -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/lwip/src/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/port/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/port/freertos/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/port/esp32xx/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/port/esp32xx/include/arch -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/deprecated -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/analog_comparator/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/dac/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/gpio/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/gptimer/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/i2c/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/i2s/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/ledc/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/mcpwm/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/parlio/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/pcnt/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/rmt/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/sdio_slave/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/sdmmc/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/sigma_delta/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/spi/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/temperature_sensor/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/touch_sensor/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/twai/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/uart/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/usb_serial_jtag/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/driver/touch_sensor/esp32/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_pm/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/ESP_IDF/ESP32_project/gatt_server=. -fmacro-prefix-map=D:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/w25q32/CMakeFiles/__idf_w25q32.dir/w25q32.c.obj -MF esp-idf\w25q32\CMakeFiles\__idf_w25q32.dir\w25q32.c.obj.d -o esp-idf/w25q32/CMakeFiles/__idf_w25q32.dir/w25q32.c.obj -c D:/ESP_IDF/ESP32_project/gatt_server/components/w25q32/w25q32.c
D:/ESP_IDF/ESP32_project/gatt_server/components/w25q32/w25q32.c:239:6: error: conflicting types for 'W25Q32_get_wifi_info'; have 'void(uint8_t,  uint8_t)' {aka 'void(unsigned char,  unsigned char)'}
  239 | void W25Q32_get_wifi_info(uint8_t i, uint8_t l) {
      |      ^~~~~~~~~~~~~~~~~~~~
In file included from D:/ESP_IDF/ESP32_project/gatt_server/components/w25q32/w25q32.c:10:
D:/ESP_IDF/ESP32_project/gatt_server/components/w25q32/include/w25q32.h:52:10: note: previous declaration of 'W25Q32_get_wifi_info' with type 'uint8_t *(uint8_t,  uint8_t)' {aka 'unsigned char *(unsigned char,  unsigned char)'}
   52 | uint8_t* W25Q32_get_wifi_info(uint8_t i, uint8_t l);                            // get data (format "w:<ssid>\tp:<pass>")
      |          ^~~~~~~~~~~~~~~~~~~~
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/gatts_demo.c.obj
In file included from D:/ESP_IDF/ESP32_project/gatt_server/main/gatts_demo.c:21:
D:/ESP_IDF/ESP32_project/gatt_server/components/ble_test/include/ble_test.h:53:13: warning: 'gatts_profile_a_event_handler' declared 'static' but never defined [-Wunused-function]
   53 | static void gatts_profile_a_event_handler(esp_gatts_cb_event_t event, esp_gatt_if_t gatts_if, esp_ble_gatts_cb_param_t *param);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
D:/ESP_IDF/ESP32_project/gatt_server/components/ble_test/include/ble_test.h:51:13: warning: 'gap_event_handler' declared 'static' but never defined [-Wunused-function]
   51 | static void gap_event_handler(esp_gap_ble_cb_event_t event, esp_ble_gap_cb_param_t *param);
      |             ^~~~~~~~~~~~~~~~~
D:/ESP_IDF/ESP32_project/gatt_server/components/ble_test/include/ble_test.h:52:13: warning: 'gatts_event_handler' declared 'static' but never defined [-Wunused-function]
   52 | static void gatts_event_handler(esp_gatts_cb_event_t event, esp_gatt_if_t gatts_if, esp_ble_gatts_cb_param_t *param);
      |             ^~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
